compiler/testData/diagnostics/tests/overload/ConflictingOverloadsIdenticalValsInClass.kt
// FIR_IDENTICAL
class Aaa() {
    val <!REDECLARATION!>a<!> = 1
    val <!REDECLARATION!>a<!> = 1
}